# flyte-fsspec-error

./: .gitignore  Dockerfile  Makefile  README.md  error.py  pyproject.toml  requirements.txt
src/flyte_fsspec_error/: __init__.py
